update swagger documentation
